# Lust_V3

./: .gitignore  CMakeLists.txt  CMakePresets.json  D3D12ContextExport.cxx.in  Doxyfile  README.md  SampleShaderDefective.rs.cso  SampleShaderDefective.vs.cso  SampleShaderDefective.vs.spv  gen_cov.ps1  lust.code-workspace  misconfigurations.md  third_party.md  upcoming.md
Editor/: CMakeLists.txt
Editor/src/Editor/: CloseController.cpp  Editor.cpp  Editor.hpp  GameContainer.cpp  GameContainer.hpp  ThreeWayDialog.cpp  ThreeWayDialog.hpp  TranslationCompiler.cpp  TranslationCompiler.hpp  entrypoint.cpp
Editor/src/pch/: pch.hpp
Editor/translations/: dialogbox_en_us.xml  dialogbox_pt_br.xml  sample.json
Examples/: CMakeLists.txt  D3D12ContextExport.cpp
Examples/FlappyClone/: CMakeLists.txt  Controller.cpp  Controller.hpp  GameLayer.cpp  GameLayer.hpp  Level.cpp  Level.hpp  Player.cpp  Player.hpp  entry.cpp
Examples/Layers/: CMakeLists.txt  Controller.cpp  ExampleLayer.cpp  ExampleLayer.hpp  entry.cpp
Examples/d3d12_sample_fix/: CMakeLists.txt  entry.cpp
Launcher/: CMakeLists.txt
Launcher/assets/shaders/: FlatColor.hlsl  HelloTriangle.hlsl  Renderer2D.hlsl  TexturedRenderer2D.hlsl
Launcher/src/: D3D12ContextExport.cxx.in  entry.cpp
Lust/: CMakeLists.txt  Lust.hpp  entry.cpp
Lust/assets/shaders/: Renderer2D.hlsl
Lust/src/Core/: Application.cpp  Application.hpp  ApplicationStarter.cpp  ApplicationStarter.hpp  CmdArgs.cpp  CmdArgs.hpp  GamepadCodes.hpp  JoystickCodes.hpp  KeyCodes.hpp  Languages.cpp  Languages.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Lust.cpp  Lust.hpp  LustDLLMacro.hpp  MouseCodes.hpp  OrthographicCameraController.cpp  OrthographicCameraController.hpp  Sleeper.cpp  Sleeper.hpp  Timestep.cpp  Timestep.hpp  Translation.cpp  Translation.hpp  Translator.cpp  Translator.hpp
Lust/src/Events/: ApplicationEvent.hpp  Event.hpp  InputEvent.hpp
Lust/src/Graphics/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  CopyPipeline.cpp  CopyPipeline.hpp  Drawer.cpp  Drawer.hpp  Font.cpp  Font.hpp  GPUInstrumentator.cpp  GPUInstrumentator.hpp  GraphicsContext.cpp  GraphicsContext.hpp  ImguiContext.cpp  ImguiContext.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  Sampler.cpp  Sampler.hpp  Shader.cpp  Shader.hpp  ShaderReflector.cpp  ShaderReflector.hpp  SpriteSheet.cpp  SpriteSheet.hpp  Texture.cpp  Texture.hpp
Lust/src/MathOperations/: Conversions.hpp  MathBuffer.hpp  Operations.hpp  Projection.hpp  Transformation.hpp
Lust/src/Platform/Graphics/D3D12/: D3D12Buffer.cpp  D3D12Buffer.hpp  D3D12Context.cpp  D3D12Context.hpp  D3D12CopyPipeline.cpp  D3D12CopyPipeline.hpp  D3D12Drawer.cpp  D3D12Drawer.hpp  D3D12Functions.cpp  D3D12Functions.hpp  D3D12ImguiContext.cpp  D3D12ImguiContext.hpp  D3D12Instrumentator.cpp  D3D12Instrumentator.hpp  D3D12Sampler.cpp  D3D12Sampler.hpp  D3D12Shader.cpp  D3D12Shader.hpp  D3D12ShaderReflector.cpp  D3D12ShaderReflector.hpp  D3D12Texture.cpp  D3D12Texture.hpp
Lust/src/Platform/Graphics/VK/: VKBuffer.cpp  VKBuffer.hpp  VKContext.cpp  VKContext.hpp  VKCopyPipeline.cpp  VKCopyPipeline.hpp  VKDrawer.cpp  VKDrawer.hpp  VKFunctions.cpp  VKFunctions.hpp  VKImguiContext.cpp  VKImguiContext.hpp  VKSampler.cpp  (+9 more)
Lust/src/Platform/Window/: SDL3Functions.cpp  SDL3Functions.hpp  SDL3ImguiWindowController.cpp  SDL3ImguiWindowController.hpp  SDL3Input.cpp  SDL3Input.hpp  SDL3Window.cpp  SDL3Window.hpp
Lust/src/Scene/: CameraComponent.cpp  CameraComponent.hpp  Components.hpp  Entity.cpp  Entity.hpp  NativeScriptComponent.hpp  Scene.cpp  Scene.hpp  ScriptableEntity.cpp  ScriptableEntity.hpp  SpriteRendererComponent.cpp  SpriteRendererComponent.hpp  TilemapComponent.cpp  TilemapComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
Lust/src/Sockets/: SocketDefs.hpp  Sockets.cpp  Sockets.hpp
Lust/src/Window/: ImguiWindowController.cpp  ImguiWindowController.hpp  Input.cpp  Input.hpp  Window.cpp  Window.hpp
Lust/src/fbs/: translations.fbs
Lust/src/pch/: pch.hpp
Sandbox/: CMakeLists.txt
Sandbox/assets/fonts/: .gitignore
Sandbox/assets/texture_map/: scenario.json
Sandbox/src/: Entrypoint.cpp  Entrypoint.hpp  Sandbox.cpp  Sandbox.hpp
Sandbox/src/Sandbox/: CameraController.cpp  CameraController.hpp  CloseController.hpp  CommonDefs.hpp  Entrypoint.cpp  ExampleLayer.cpp  ExampleLayer.hpp  ExampleQtWindow.cpp  ExampleQtWindow.hpp  FontAtlas.cpp  FontAtlas.hpp  LustSandboxDLLMacro.hpp  PlayerController.cpp  PlayerController.hpp  SandCoffin.cpp  SandCoffin.hpp  SandCoffin2D.cpp  SandCoffin2D.hpp  Sandbox.hpp
ShaderManager/: CMakeLists.txt
ShaderManager/src/Reflector/: ShaderReflector.cpp  ShaderReflector.hpp
ShaderManager/src/ShaderManager/: CSOCompiler.cpp  CSOCompiler.hpp  CommonResourceDefs.hpp  Compiler.cpp  Compiler.hpp  CompilerExceptions.cpp  CompilerExceptions.hpp  DXCSafeInclude.hpp  InputBufferLayout.cpp  InputBufferLayout.hpp  LustShaderManagerDLLMacro.hpp  SPVCompiler.cpp  SPVCompiler.hpp  SamplerLayout.cpp  SamplerLayout.hpp  StructuredBufferLayout.cpp  StructuredBufferLayout.hpp  TargetAPI.hpp  TextureLayout.cpp  TextureLayout.hpp  Topology.hpp  UniformsLayout.cpp  UniformsLayout.hpp
ShaderManager/tests/: BaseShader.hpp  CSOCompiler.cpp  Compiler.cpp  InputBufferLayout.cpp  SPVCompiler.cpp  SamplerLayout.cpp  StructuredBufferLayout.cpp  TextureLayout.cpp  UniformsLayout.cpp
UI/: CMakeLists.txt
UI/src/UI/: LustUIDLLMacro.hpp  UI.cpp  UI.hpp
UI/vma/: vma_defs.hpp
Utils/: CMakeLists.txt
Utils/src/Utils/: ColorCaster.cpp  ColorCaster.hpp  ComPointer.hpp  CommonException.cpp  CommonException.hpp  Console.cpp  Console.hpp  FileHandler.cpp  FileHandler.hpp  Image.cpp  Image.hpp  Instrumentator.cpp  Instrumentator.hpp  JPEGImage.cpp  JPEGImage.hpp  LustUtilsDLLMacro.hpp  Macros.hpp  MathComponents.hpp  MathUtils.cpp  MathUtils.hpp  PNGImage.cpp  PNGImage.hpp  RawBuffer.cpp  RawBuffer.hpp
Utils/tests/: ComPointer.cpp  CommonException.cpp  Console.cpp  File.cpp  Image.cpp  Instrumentator.cpp
(+74 files in other folders)
